--- a/contato.html
+++ b/contato.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>Contato - Minha Loja Online</title>
+    <script src="carrinho.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
     <header>
-        <h1>Minha Loja Online</h1>
+        <img class="logo" src="logo.png" >
         <nav>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
