--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Minha Loja Online</title>
+    <script src="carrinho.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
     <header>
       
-        <h1>Minha Loja Online</h1>
+        <img class="logo" src="logo.png" >
         <nav>
             <ul>
                 <li><a href="index.html">Pagina Inicial</a></li>
