--- a/minhaconta.html
+++ b/minhaconta.html
@@ -6,7 +6,7 @@
 
 <body>
     <header>
-        <h1>Minha Loja Online</h1>
+        <img class="logo" src="logo.png" >
         <nav>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
