--- a/produtos.html
+++ b/produtos.html
@@ -1,25 +1,24 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Produtos - Minha Loja Online</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <h1>Minha Loja Online</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Pagina Inicial</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="carrinho.html">Carrinho</a></li>
-            <li><a href="minhaconta.html">Minha Conta</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-    </nav>
 </head>
 <body>
     <header>
-       
- 
+        <img class="logo" src="logo.png">
+        <nav>
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="carrinho.html">Carrinho</a></li>
+                <li><a href="minhaconta.html">Minha Conta</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
     </header>
-    
+
     <h2>Produtos Disponíveis</h2>
 
     <div class="produtos-container">
@@ -29,7 +28,7 @@
             <h3>Produto 1</h3>
             <p>Descrição do Produto 1.</p>
             <p>Preço: R$ 19.99</p>
-            <button onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho(1, 'Produto 1', 19.99)">Adicionar ao Carrinho</button>
         </div>
 
         <!-- Produto 2 -->
@@ -38,7 +37,7 @@
             <h3>Produto 2</h3>
             <p>Descrição do Produto 2.</p>
             <p>Preço: R$ 29.99</p>
-            <button onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho(2, 'Produto 2', 29.99)">Adicionar ao Carrinho</button>
         </div>
 
         <!-- Produto 3 -->
@@ -47,7 +46,7 @@
             <h3>Produto 3</h3>
             <p>Descrição do Produto 3.</p>
             <p>Preço: R$ 24.99</p>
-            <button onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho(3, 'Produto 3', 24.99)">Adicionar ao Carrinho</button>
         </div>
 
         <!-- Adicione mais produtos disponíveis aqui -->
@@ -56,5 +55,6 @@
     <footer>
         &copy; 2023 Minha Loja Online
     </footer>
+
 </body>
 </html>
