caarrinho de compras

--- a/carrinho.html
+++ b/carrinho.html
@@ -1,4 +1,4 @@
-
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,7 +22,7 @@
     <h2>Seu Carrinho de Compras</h2>
     
     <div id="carrinho">
-        <!-- O carrinho está vazio -->
+        <!-- O carrinho está vazio 
     </div>
     <footer>
         &copy; 2023 Minha Loja Online
@@ -31,3 +31,4 @@
     
 </body>
 </html>
+-->
