--- a/produtos.html
+++ b/produtos.html
@@ -28,7 +28,7 @@
             <h3>Produto 1</h3>
             <p>Descrição do Produto 1.</p>
             <p>Preço: R$ 19.99</p>
-            <button onclick="adicionarAoCarrinho(1, 'Produto 1', 19.99)">Adicionar ao Carrinho</button>
+            <button onclick="Adicione(1, 'Produto 1', 19.99)">Adicionar ao Carrinho</button>
         </div>
 
         <!-- Produto 2 -->
@@ -37,7 +37,7 @@
             <h3>Produto 2</h3>
             <p>Descrição do Produto 2.</p>
             <p>Preço: R$ 29.99</p>
-            <button onclick="adicionarAoCarrinho(2, 'Produto 2', 29.99)">Adicionar ao Carrinho</button>
+            <button onclick="Adicione(2, 'Produto 2', 29.99)">Adicionar ao Carrinho</button>
         </div>
 
         <!-- Produto 3 -->
@@ -46,15 +46,30 @@
             <h3>Produto 3</h3>
             <p>Descrição do Produto 3.</p>
             <p>Preço: R$ 24.99</p>
-            <button onclick="adicionarAoCarrinho(3, 'Produto 3', 24.99)">Adicionar ao Carrinho</button>
+            <button onclick="Adicione(3, 'Produto 3', 24.99)">Adicionar ao Carrinho</button>
         </div>
-
         <!-- Adicione mais produtos disponíveis aqui -->
     </div>
-
+    
+   <h2>Carrinho de Compras</h2>
+   <div class="produto-carrinho">
+    <img src="chuteira nike.png" alt="Produto Carrinho 1">
+    <h3>Produto 1</h3>
+    <p>Descrição do Produto 1.</p>
+    <p>Preço: R$ 19.99</p>
+    <button onclick="Remove()">Excluir</button>
+</div>
+<div class="novoItem">
+    <img src="chuteira nike.png" alt="Produto Carrinho 1">
+    <h3>Produto 1</h3>
+    <p>Descrição do Produto 1.</p>
+    <p>Preço: R$ 19.99</p>
+    <button onclick="Remove()">Excluir</button>
+</div>
     <footer>
         &copy; 2023 Minha Loja Online
-    </footer>
 
+    </footer>
+    <script src="produtos.js"> </script>
 </body>
 </html>
