--- a/minhaconta.html
+++ b/minhaconta.html
@@ -11,9 +11,9 @@
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="carrinho.html">Carrinho</a></li>
                 <li><a href="minhaconta.html">Minha Conta</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referências.html">Referências</a></li>
             </ul>
         </nav>
 
@@ -45,12 +45,14 @@
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha">
             <br>
-            <button type="submit">Salvar Configurações</button>
+            <button class="submit" onclick="botaoHandler()">Salvar Configurações</button>
         </form>
     </div>
 
     <footer>
-        &copy; 2023 Minha Loja Online
+        &copy; 2023 Daniel Pacheco dos santos , Thiago Puka Pinheiro
     </footer>
+    <script src="minhaconta.js"> </script>
+
 </body>
 </html>
