--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <ul>
                 <li><a href="index.html">Pagina Inicial</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="carrinho.html">Carrinho</a></li>
                 <li><a href="minhaconta.html">Minha Conta</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referências.html">Referências</a></li>
             </ul>
         </nav>
     
@@ -58,7 +58,7 @@
     </div >
 
     <footer>
-        &copy; 2023 Minha Loja Online
+        &copy; 2023 Daniel Pacheco dos santos , Thiago Puka Pinheiro
     </footer>
 </body>
 </html>
