--- a/produtos.html
+++ b/produtos.html
@@ -12,9 +12,9 @@
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="carrinho.html">Carrinho</a></li>
                 <li><a href="minhaconta.html">Minha Conta</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referências.html">Referências</a></li>
             </ul>
         </nav>
     </header>
@@ -64,10 +64,10 @@
     <h3>Produto 1</h3>
     <p>Descrição do Produto 1.</p>
     <p>Preço: R$ 19.99</p>
-    <button onclick="Remove()">Excluir</button>
+    <button onclick="Remove2()">Excluir</button>
 </div>
     <footer>
-        &copy; 2023 Minha Loja Online
+        &copy; 2023 Daniel Pacheco dos santos , Thiago Puka Pinheiro
 
     </footer>
     <script src="produtos.js"> </script>
