--- a/referências.html
+++ b/referências.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contato - Minha Loja Online</title>
-    <script src="carrinho.js"></script>
+    <title>Produtos - Minha Loja Online</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png" >
+        <img class="logo" src="logo.png">
         <nav>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
@@ -18,21 +16,19 @@
                 <li><a href="referências.html">Referências</a></li>
             </ul>
         </nav>
-
-   
     </header>
+    <h2>Referências</h2>
+    <div class="div3">
+        <p>Colegio Angelo Gusso, 2°E</p>
 
-    <h2>Entre em Contato Conosco</h2>
-
-    <div class="div1" class="contato-container">
-        <p>Se você tiver alguma dúvida, sugestão ou precisar de assistência, entre em contato conosco através dos seguintes meios:</p>
-
-        <p><strong>E-mail:</strong> contato@minhalojaonline.com</p>
-        <p><strong>Telefone:</strong> (11) 1234-5678</p>
+        <p><strong>Nomes:</strong> Daniel Pacheco dos Santos, 38
+                                   Thiago Puka Pinheiro, 34</p>
+        <p><strong>Referência Pincipal:</strong> ChatGPT</p>
     </div >
 
     <footer>
         &copy; 2023 Daniel Pacheco dos santos , Thiago Puka Pinheiro
+
+
     </footer>
-</body>
-</html>
+    </body>
